SDR-360: style: sonarcloud code smell 제거
- Test 코드에서 exception 발생할 수 있는 포인트 제거
- 주석 indent 추가
- 미사용 코드 & 주석 제거
- Stream.collect(Collectors.toList()) -> Stream.toList()
- Test class public 제거
- deprecated 주석 추가
- abstract class 생성자 protected 로 변경
- 조건문 가독성 좋게 변경

Co-authored-by: ku-kim <kukim.dev@gmail.com>
Co-authored-by: forky <forky.dev@gmail.com>